--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .pointer {
   cursor: pointer;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Ropa Sans', sans-serif;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-bigger {
+  font-size: 1.2rem;
+}
